# danube-connectors

./: .dockerignore  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: release-sink-deltalake.yml  release-sink-qdrant.yml  release-sink-surrealdb.yml  release-source-mqtt.yml  release-source-webhook.yml
docs/: Sink_Connector_Development.md
example_e2e/: .env.example  README.md  danube_broker.yml  docker-compose.yml  send-webhook.sh  surrealdb-sink-connector.toml  webhook-connector.toml
example_e2e/schemas/: payment.json
example_shared/: danube_broker_no_auth.yml
sink-deltalake/: .gitignore  Cargo.toml  Dockerfile  README.md
sink-deltalake/config/: README.md  connector-azure.toml  connector-gcs.toml  connector-s3-minio.toml
sink-deltalake/example/: Dockerfile.tools  README.md  connector.toml  docker-compose.yml  events-schema.json  test_producer.py  test_producer.sh
sink-deltalake/src/: config.rs  connector.rs  lib.rs  main.rs  record.rs
sink-qdrant/: Cargo.toml  Dockerfile  README.md
sink-qdrant/config/: README.md  connector-multi-topic.toml  connector.toml
sink-qdrant/example/: README.md  connector.toml  danube_broker.yml  docker-compose.yml  embeddings-schema.json  embeddings.jsonl  generate_embeddings.py  requirements.txt  search_vectors.py  test_producer.py  test_producer.sh
sink-qdrant/src/: config.rs  connector.rs  main.rs  record.rs  transform.rs
sink-surrealdb/: .gitignore  Cargo.toml  Dockerfile  README.md
sink-surrealdb/config/: README.md  connector-multi-topic.toml  connector.toml
sink-surrealdb/example/: README.md  connector.toml  docker-compose.yml  events-schema.json  requirements.txt  test_producer.py  test_producer.sh
sink-surrealdb/src/: config.rs  connector.rs  main.rs  record.rs
source-mqtt/: Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md
source-mqtt/config/: README.md  connector-with-schemas.toml
source-mqtt/example/: README.md  connector.toml  danube_broker.yml  docker-compose.yml  mosquitto.conf  test-publisher.sh
source-mqtt/example/schemas/: device-status.json  sensor-data.json
source-mqtt/src/: config.rs  connector.rs  main.rs
source-webhook/: Cargo.toml  Dockerfile  README.md
source-webhook/config/: README.md  connector-no-schemas.toml  connector.toml
source-webhook/config/schemas/: customer.json  payment.json
source-webhook/example/: README.md  connector.toml  danube_broker.yml  docker-compose.yml  test-publisher.sh
source-webhook/src/: auth.rs  config.rs  connector.rs  main.rs  rate_limit.rs  server.rs
