[package]
name = "danube-source-mqtt"
version = "0.1.4"
edition = "2021"
authors = ["Danube Team"]
description = "MQTT source connector for Danube Connect"
license = "Apache-2.0"

[[bin]]
name = "danube-source-mqtt"
path = "src/main.rs"

[dependencies]
# Danube integration
danube-connect-core = "0.3.2"

# MQTT client (connector-specific)
rumqttc = "0.25.1"

# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0.69"

[dev-dependencies]
mockall = "0.12"
